<?xml version="1.0"?>
<package format="2">
  <name>motoman_apps</name>
  <version>0.1.0</version>
  <description>The application package for motoman_apps</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>motoman_moveit_apps</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
