<?xml version="1.0"?>
<package format="2">
  <name>motoman_apps</name>
  <version>0.1.0</version>
  <description>The application package for motoman_apps</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>BSD</license>

  <author>Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>motoman_mathworks_apps</exec_depend>
  <exec_depend>motoman_moveit_apps</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
